# WrathAndGloryXPOptimizer

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  TestChar.json  TestChar_ExpectedResults.json  characterProperties.py  noxfile.py  pyproject.toml  pyproject_orig.toml  requirements.txt  run_flask.sh  testCharacterProperties.py  testXpOptimizer.py  xpOptimizer.py  xpOptimizerResults.py  xpOptimizerService.py  xpOptimizerTest.py
.github/workflows/: constraints.txt  python-app.yml  tests.yml  unittests.yml
docs/: XPOptimizerBreakEven.ods  XPOptimizerPlots.ods  conf.py  index.rst  reference.rst  software_requirements_specification.md  theoretical_background.md  usage.rst
src/wrath_and_glory_xp_optimizer/: __init__.py  character_properties.py  exceptions.py  optimize_xp.py  optimizer_core.py  optimizer_results.py  optimizer_service.py  xpOptimizer.py  xpOptimizerResults.py
src/wrath_and_glory_xp_optimizer/character_properties/: _base_property.py  _property_enum.py  _rating_mixin.py  attributes.py  base_property.py  int_bounds.py  property_enum.py  rating_dict.py  skills.py  tier.py  traits.py
src/wrath_and_glory_xp_optimizer/character_propertieskkk/: base_property.py
tests/: __init__.py  example_file.json  example_file_access.py  example_file_expected_results.json  example_file_expected_results.md  testCharacterProperties.py  testXpOptimizer.py  test_character_properties.py  test_optimize_xp.py  test_optimizer_core.py  test_optimizer_results.py
