[tool.poetry]
name = "wrath_and_glory_xp_optimizer"
version = "2.0.0"
description = "A tool to optimize the spent xp on a character for the Wrath & Glory RPG."
authors = ["LordFckHelmchen <dj_mack@gmx.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
keywords = ["rpg", "rpg-tool",  "wrathandglory", "optimization", "mixed-integer non-linear programming", "minlp", "gekko"]
repository = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
documentation = "https://WrathAndGloryXPOptimizer.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer/releases"

[tool.poetry.dependencies]
python = "^3.8"
gekko = "^0.2.8"
numpy = "^1.20.2"
click = "^7.1.2"
Flask = "^1.1.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = {extras = ["toml"], version = "^5.5"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.12.0"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^2.7.1"
Pygments = "^2.8.1"

[tool.poetry.scripts]
optimize-xp = "wrath_and_glory_xp_optimizer.optimize_xp:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wrath_and_glory_xp_optimizer"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
