[tool.poetry]
name = "wrath_and_glory_xp_optimizer"
version = "2.0.0"
description = "A tool to optimize the spent xp on a character for the Wrath & Glory RPG."
authors = ["LordFckHelmchen <dj_mack@gmx.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
keywords = ["rpg", "rpg-tool",  "wrathandglory", "optimization", "mixed-integer non-linear programming", "minlp", "gekko"]
repository = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
documentation = "https://WrathAndGloryXPOptimizer.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer/releases"

[tool.poetry.dependencies]
python = "^3.8"
gekko = "^1.0.2"
numpy = "^1.22.3"
click = "^8.0.4"
Flask = "^2.0.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
safety = "^1.10.3"
mypy = "^0.941"
typeguard = "^2.13.3"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.0.1"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
pre-commit-hooks = "^4.1.0"
Pygments = "^2.11.2"

[tool.poetry.scripts]
optimize-xp = "wrath_and_glory_xp_optimizer.optimize_xp:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wrath_and_glory_xp_optimizer"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
