[tool.poetry]
name = "wrath-and-glory-xp-optimizer"
version = "2.0.0"
description = "A tool to optimize the spent xp on a character for the Wrath & Glory RPG."
authors = ["LordFckHelmchen <dj_mack@gmx.de>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
keywords = ["rpg-tool", "wrathandglory", "wrath-and-glory", "optimization", "mixed-integer non-linear programming", "minlp", "gekko"]
repository = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/LordFckHelmchen/WrathAndGloryXPOptimizer/releases"

[tool.poetry.dependencies]
python = "^3.8"
gekko = "^1.0.2"
numpy = "^1.22.3"
click = "^8.0.4"
Flask = "^2.0.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
coverage = { extras = ["toml"], version = "^6.5.0" }
darglint = "^1.8.1"
isort = "^5.10.1"
mypy = "^0.982"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
Pygments = "^2.13.0"
pytest = "^7.1.3"
pyupgrade = "^3.1.0"
safety = "^2.3.1"
toml = "^0.10.2"

[tool.poetry.scripts]
optimize-xp = "wrath_and_glory_xp_optimizer.optimize_xp:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
